# python_toolkit_project_template

./: README.md  cookiecutter.json
{{ cookiecutter.repo_name }}/: README.md  noxfile.py  pyproject.toml
